refactor: null 리턴을 emptyList 리턴으로 변경